# ese3600_xiao

./: .gitignore  README.md  magicWand_dataCollection_win.cpp
KWS_esp/: CMakeCache.txt  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.seeed_xiao_esp32s3
KWS_esp/main/: CMakeLists.txt  KWS_custom.cc  KWS_custom.h  audio_provider.cc  command_responder.cc  feature_provider.cc  idf_component.yml  main.cc  main_functions.cc  micro_features_generator.cc  micro_features_generator.h  micro_model_settings.h  model (1).cc  model.cc  oled_display.cc  oled_display.h
KWS_esp/tools/: generate_wavs.py
MW_DataCollection/: MagicWand.html
MW_DataCollection/src/: main.cpp
TFLM_tutorial/: platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.seeed_xiao_esp32s3
TFLM_tutorial/src/: constants.cc  idf_component.yml  main.cc  output_handler.cc
VWW/: platformio.ini
VWW/model/: model-float32.tflite  model-int8.tflite
VWW/src/: main.cpp  model.cc
l1-blinky/: platformio.ini
l1-blinky/src/: main.cpp
magic_wand/: platformio.ini
magic_wand/src/: constants.h  imu_provider.cpp  (+3 more)
magicwand/: CMakeLists.txt  README.md  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.xiao_magic_wand2  setup.sh
multi-tenant/: CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.defaults
multi-tenant/components/kws/: CMakeLists.txt  feature_provider.cc  kws_runner.cc  main_functions.cc  model.cc
multi-tenant/components/kws/include/kws/: kws.h  main_functions.h  micro_model_settings.h  model.h
tinyml-mic-test/: .gitignore  README.md  platformio.ini
(+39 files in other folders)
